--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "rahil",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0"
